Updated IPython with slow autoreload bug removed

--- a/backstage/docker/Dockerfile
+++ b/backstage/docker/Dockerfile
@@ -45,6 +45,7 @@ RUN chmod a+rwx /etc/bash.bashrc
 
 RUN ${PIP} install jupyter matplotlib
 RUN ${PIP} install jupyter_http_over_ws
+RUN ${PIP} install ipython==7.9.0
 RUN jupyter serverextension enable --py jupyter_http_over_ws
 
 RUN mkdir -p /labs && chmod -R a+rwx /labs/
